# Polygen

./: .editorconfig  .gitignore  404.html  README.md  grammar.peg  grammar_preprocessor.peg  index.html  make.sh  old_test.py  pyproject.toml  search.html  skeleton-preprocessor.peg  todo.txt
codegen/python/: config.py  gen.py  gen.py.new  parser.py.in
docs/: mkdocs.yml
docs/docs/: index.md  language-reference.md
examples/calculator/: README.md  calculator.py  example.in  grammar.impl.peg  grammar.peg  parser.py  parser.py.skel
grammar/: parser.peg  source_preprocessor.peg
grammars/: parser.peg
language-reference/: index.html
misc/: rules-to-code.txt
polygen/: __main__.py  __version__.py  attrholder.py  codegen.py  config.py  errors.py  gen_base.py  generate_python.py  generator.py  grammar.peg  grammar_parser.py  main.py  modifier.py  node.py  parser.peg  parser.py  preprocessor.py  python_gen.py  reader.py  token.py  tree_modifier.py  tree_transformer.py  utility.py
polygen/backend/: python.py
polygen/bootstrap/: parser.py  parser.py.skel
polygen/equivalency/: test.py
polygen/fixes/: enum.py  enum_repr.py
polygen/generator/: __init__.py  base.py  config.py  generator.py  (+4 more)
search/: search_index.json
skeletons/: parser.py.in  parser.py.skel
tests/: test_config.py  test_equivalency.py  test_generate_parser.py  test_generated_parser.py  test_gpreprocessor.py  test_grammar_parser.py  test_node.py  test_parser.py  test_parser_equivalency.py  test_preprocessor.py  test_reader.py  test_tree_modifier.py  test_tree_transformer.py  test_utility.py
(+136 files in other folders)
